--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,13 @@
     <title>test</title>
 </head>
 <body>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+
     <div id="app">
-        <menu>  </menu>
         <div ui-view></div>
     </div>
+
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
