detalles diseño - menu

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="../node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
 
     <div id="app">
         <div ui-view></div>
